--- a/india.html
+++ b/india.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Love from India</title>
-  </head>
-  <body>
-    
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Love from India</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      color: #e74c3c;
+    }
+    p {
+      color: #333;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png" alt="Indian Flag">
+    <h1>Love from India</h1>
+    <p>India, a land of diversity, culture, and heritage. With its rich history and traditions, India welcomes you with open arms. From the majestic Himalayas to the serene beaches of Kerala, from the bustling streets of Delhi to the vibrant markets of Mumbai, India captivates the heart of every visitor.</p>
+    <p>Experience the warmth of Indian hospitality, savor the flavors of its cuisine, and immerse yourself in its colorful festivals. Whether you're exploring ancient temples, admiring Mughal architecture, or indulging in Bollywood magic, India offers a tapestry of experiences that will leave you enchanted.</p>
+    <p>India has made significant contributions to the world in various fields including mathematics, astronomy, yoga, spirituality, and literature. The concept of zero, the decimal system, and the value of pi were pioneered by Indian mathematicians. Yoga, originating from ancient India, is now practiced worldwide for physical and mental well-being.</p>
+    <p>But perhaps India's greatest contribution is its people. Known for their warmth, generosity, and hospitality, Indians welcome guests with an open heart and treat them as family. The love and affection of the Indian people leave a lasting impression on all who visit.</p>
+    <p>Welcome everyone, to the land of India, where every visitor is embraced as a friend and every moment is cherished with love.</p>
+  </div>
+</body>
 </html>
